# FileFriend

./: .gitignore  Dockerfile  README.md  credentials.yaml  docker-compose.yml  env_settings.py  home.py  pyproject.toml  requirements.txt  tools.py  utils.py
databases/: cruds.py  schemas.py
handlers/: authentication.py
pages/: test.py
templates/: files.py  users.py
