[tool.poetry]
name = "file-friend"
version = "0.1.0"
description = ""
authors = ["nick <nickchen1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
streamlit-authenticator = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
