[tool.poetry]
name = "file-friend"
version = "0.1.0"
description = ""
authors = ["nick <nickchen1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
streamlit-authenticator = "^0.2.3"
pydantic-settings = "^2.1.0"
click = "^8.1.7"
sqlalchemy = "^2.0.23"
st-pages = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
